--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
         <div class="col-md-12">
           <h3 class="section-title">Contact Us</h3>
           <div class="section-title-divider"></div>
-          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <p class="section-description">Please Contact Us for Any Purpose, Specially for Demo Requests. we are responding as fast as we can!</p>
         </div>
       </div>
       
@@ -474,7 +474,7 @@
                   <textarea class="form-control" name="message" id="msg" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
                   <div class="validation"></div>
                 </div>
-                <div class="text-center"><button type="submit" id="btnSubmit">Send Message</button></div>
+                <div class="text-center"><button type="submit" id="btnSubmit" onclick="form()">Send Message</button></div>
             </form>
           </div>
         </div>
