--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       var name = document.getElementById("name").value;
       xhttp.open("GET", "https://pentom.herokuapp.com/form?email=" + email+"&name="+name+"&msg="+msg+"&size="+size, true);
       xhttp.send();
-      document.getElementById("btnSubmit").textContent="Thanks A lot, we will contact you shortly!"
+      document.getElementById("btnSubmit").textContent="Thanks A lot, we will contact you shortly!";
     }
 
   </script>
@@ -105,7 +105,7 @@
           <li><a href="#about">About Us</a></li>
           <li><a href="#services">Services</a></li>
           <!--<li><a href="#portfolio">Portfolio</a></li>-->
-          <li><a href="#testimonials">Testimonials</a></li>
+          <!--<li><a href="#testimonials">Testimonials</a></li>-->
           <li><a href="#team">Team</a></li>
           <!--<li class="menu-has-children"><a href="">Drop Down</a>-->
             <!--<ul>-->
@@ -455,9 +455,7 @@
         
         <div class="col-md-5 col-md-push-2">
           <div class="form">
-            <div id="sendmessage">Your message has been sent. Thank you!</div>
-            <div id="errormessage"></div>
-            <form action="" method="post" role="form" class="contactForm">
+            <form role="form" >
                 <div class="form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                   <div class="validation"></div>
@@ -474,7 +472,9 @@
                   <textarea class="form-control" name="message" id="msg" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
                   <div class="validation"></div>
                 </div>
-                <div class="text-center"><button type="submit" id="btnSubmit" onclick="form()">Send Message</button></div>
+                <div class="text-center">
+                  <button type="submit" id="btnSubmit" onclick="form()">Send Message</button>
+                </div>
             </form>
           </div>
         </div>
