--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
       xhttp.send();
       document.getElementById("btnsub").textContent="Thanks A lot!!";
     }
-    function form(){
+    function formSender(){
+      var xhttp = new XMLHttpRequest();
       var email = document.getElementById("email").value;
       var size = document.getElementById("size").value;
       var msg = document.getElementById("msg").value;
       var name = document.getElementById("name").value;
-      xhttp.open("GET", "https://pentom.herokuapp.com/form/?email=" + email+"&name="+name+"&msg="+msg+"&size="+size, true);
+      xhttp.open("GET", "https://pentom.herokuapp.com/?email=" + email+"&name="+name+"&msg="+msg+"&size="+size, true);
       xhttp.send();
-      document.getElementById("btnSubmit").textContent="Thanks A lot, we will contact you shortly!";
+      document.getElementById("btnsub1").textContent="Thanks A lot, we will contact you shortly!";
     }
 
   </script>
@@ -458,24 +459,47 @@
 
         <div class="col-md-5 col-md-push-2">
           <div class="form">
-            <form role="form" >
-                <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"  />
-                  <div class="validation"></div>
-                </div>
-                <div class="form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email"  />
-                  <div class="validation"></div>
-                </div>
+            <div id="sendmessage">Your message has been sent. Thank you!</div>
+            <div id="errormessage"></div>
+            <!--<form action="mailto:ronenpi1802@gmail.com" role="form" method="post" class="contactForm">-->
+                <!--<div class="form-group">-->
+                  <!--<input type="text" name="name" class="form-control" id="name" placeholder="Your Name"  />-->
+                  <!--<div class="validation"></div>-->
+                <!--</div>-->
+                <!--<div class="form-group">-->
+                  <!--<input type="email" class="form-control" name="email" id="email" placeholder="Your Email"  />-->
+                  <!--<div class="validation"></div>-->
+                <!--</div>-->
+              <!--<div class="form-group">-->
+                <!--<input type="text" class="form-control" name="size" id="size" placeholder="Company size (number)" />-->
+              <!--</div>-->
+                <!--<div class="form-group">-->
+                  <!--<textarea class="form-control" name="message" id="msg" rows="5" data-msg="Please write something for us" placeholder="Message"></textarea>-->
+                <!--</div>-->
+                <!--<div class="text-center">-->
+                  <!--<button type="submit" id="btnSubmit" onclick="form()">Send Message</button>-->
+                <!--</div>-->
+            <!--</form>-->
+            <form action="" method="post" role="form" class="contactForm" enctype="text/plain">
               <div class="form-group">
-                <input type="text" class="form-control" name="size" id="size" placeholder="Company size (number)" />
+                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+                <div class="validation"></div>
               </div>
-                <div class="form-group">
-                  <textarea class="form-control" name="message" id="msg" rows="5" data-msg="Please write something for us" placeholder="Message"></textarea>
-                </div>
-                <div class="text-center">
-                  <button type="submit" id="btnSubmit" onclick="form()">Send Message</button>
-                </div>
+              <div class="form-group">
+                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email">
+                <div class="validation"></div>
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control" name="subject" id="size" placeholder="subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject">
+                <div class="validation"></div>
+              </div>
+              <div class="form-group">
+                <textarea class="form-control" name="message" id="msg" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                <div class="validation"></div>
+              </div>
+              <div class="btn-get-started">
+                <a class="btn-get-started" id="btnsub1" onclick="formSender()">Send!</a>
+              </div>
             </form>
           </div>
         </div>
