--- a/index.html
+++ b/index.html
@@ -443,12 +443,10 @@
               <i class="fa fa-map-marker"></i>
               <p>Tel Aviv<br>Israel</p>
             </div>
-            
             <div>
               <i class="fa fa-envelope"></i>
-              <p>info@pentom.com</p>
+              <p>help.pentom@gmail.com</p>
             </div>
-            
             <div>
               <i class="fa fa-phone"></i>
               <p>+972 52 8136 894</p>
