--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         
         <h1>Welcome to Pentom</h1>
-        <h2>We Are <span class="rotating">Automating PenTests, Reporting And Analyzing Systems, Working Real-Time</span></h2>
+        <h2>We Are <span class="rotating">Automating PenTests with A.I., Reporting And Analyzing Systems, Working Real-Time</span></h2>
         <div class="actions">
           <a href="#about" class="btn-get-started">About Us</a>
           <a href="#contact" class="btn-services">Request Beta</a>
@@ -140,7 +140,7 @@
         <div class="col-md-12">
           <h3 class="section-title">About Us</h3>
           <div class="section-title-divider"></div>
-          <p class="section-description">Pentom is a brand new way of analysing your system.. Using sophisticated automated penetration testing!</p>
+          <p class="section-description">Pentom is a brand new way of analysing your system..analyse your system with the power of A.I., Using sophisticated intelligence automated penetration testing! </p>
         </div>
       </div>
     </div>
@@ -156,6 +156,9 @@
           </p>
           <p class="about-text">
             The results are incredible! security increases in high percentages and turns your system to the most smart and secure company.
+          </p>
+          <p class="about-text">
+            We are group of penetration testers who put our knowledge of cyber-security in Artificial intelligence and trained it to be the greatest pen-tester!
           </p>
         </div>
       </div>
